--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
        
         <div class="container">
 
-            <nav>
+            <nav class="navBar">
                 <a href="index.html"><img src="Imagenes_Proyecto/Logo Entero.png" class="logonav"></a>
 
                 <ul id="sidemenu">
-
+                
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <li><a href="about.html">Acerca De</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
